[package]
name = "objpool"
version = "0.2.0"
authors = ["Avery Fay <avery@shadypixel.com>"]
description = "Thread-safe generic object pool"
documentation = "https://btmorex.github.io/objpool/objpool/index.html"
repository = "https://github.com/btmorex/objpool"
readme = "README.md"
keywords = ["generic", "object", "pool", "thread", "thread-safe"]
license = "MIT"
